[package]
name = "clia-reqwest-ntex-stream"
version = "1.0.0"
authors = ["clia <clia@163.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "A Stream to link between Reqwest and ntex two systems."
repository = "https://github.com/clia/reqwest-ntex-stream"
keywords = ["reqwest", "ntex", "stream", "adaptor"]

[lib]
name = "clia_reqwest_ntex_stream"
crate-type = ["rlib"]

[dependencies]
ntex = "0"
futures = "0.3"
reqwest = "0"
bytes = "1"
